Fix set and search pages on Preset A composite
The set and search pages don't fit in properly in
composite mode. This happens because of the extra
padding we add around the pages.

https://phabricator.endlessm.com/T13449

--- a/data/css/preset_a.scss
+++ b/data/css/preset_a.scss
@@ -90,6 +90,7 @@
 
     .set-page,
     .search-page {
+        padding: 0px;
         .ContentGroupContentGroup__title,
         .BannerSearch__title {
             font-size: 16.4px;  /* 14px spec * 88% */
